[package]
name = "token-vesting"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.11.1"
num_enum = "0.5.7"
borsh = "0.9.3"
thiserror = "1.0.31"
num-traits = "0.2"
num-derive = "0.3"
enumflags2 = "0.7.5"
spl-token = {version="3.3.0", features= ["no-entrypoint"]}
bonfida-utils = {path = "../../../bonfida-utils/utils", features = ["instruction_params_wrapped"]}
spl-associated-token-account = {version = "1.0.5", features = ["no-entrypoint"]}
bytemuck = "1.10.0"


[dev-dependencies]
hexdump = "0.1.0"
solana-sdk = "1.8.0"
rand = "0.8.4"
arrayref = "0.3.6"
solana-program-test = "1.8.0"
tokio = {version="1.6", features = ["macros"]}



[lib]
crate-type = ["cdylib", "lib"]
